<resources>
    <string name="app_name">Gallery</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="swipe">swipe</string>
    <string name="loading">loading</string>
    <string name="img_id">img_id</string>
    <string name="index">index</string>
    <string name="author">author</string>
    <string name="indextext">IndexText</string>
</resources>